--- a/app.json
+++ b/app.json
@@ -15,12 +15,17 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
+      "supportsTablet": true,
       "bundleIdentifier": "co.nucamp.nucampsite.student",
       "buildNumber": "1.0.0"
     },
     "android": {
       "package": "co.nucamp.nucampsite.student",
-      "versionCode": 1
+      "versionCode": 1,
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
